1 улучшил класс бота и настройки  приложения 2 добавил каркасы хендлеров 3 создал составление ответных клавиатур